2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Prevent that repeated calls of epc_test_quit kills the EpcShell.

	* libepc/shell.c: Trace epc_shell_ref/unref when EPC_DEBUG is set.
	* tests/framework.c: Try to call epc_shell_unref only once.
	* tests/test-dispatcher-simple-service.c: Your changes...

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Remove g_debug calls in test-consumer-by-name.

	* tests/test-consumer-by-name.c: Remove g_debug calls.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Add gdk_threads hooks to inspect #494173.

	* examples/test-consumer.c: Add gdk_threads hooks to inspect #494173.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	* libepc/consumer.c, libepc/consumer.h: Add epc_consumer_new_for_name
	and epc_consumer_new_for_name_full for connecting by service name.
	* libepc/dispatcher.c: Use external _epc_debug variable.
	* libepc/shell.c: Provide _epc_debug variable.
	* tests/test-consumer-by-name: Test epc_consumer_new_for_name.
	* Makefile.am, tests/.gitignore: Add tests/test-consumer-by-name.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Try to prevent dead-locks with GDK when entering main loops.

	* configure.in: Add gmodule-2.0 as dependency.
	* libepc/shell.c, libepc/shell.h: Add epc_shell_leave and
	epc_shell_enter which deal with GDK's big lock when needed.
	* libepc/dispatcher.c: Call epc_shell_unref in finalize, not dispose.
	* libepc/consumer.c: Unlock when calling soup_session_send_message.
	* tests/framework.c: Unlock when calling g_main_loop_run.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Also commit services when not adding any subtypes.

	* libepc/dispatcher.c: Also schedule commmit from epc_service_publish.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcAvahiShell to EpcShell.

	* libepc/dispatcher.c, libepc/publisher.c, libepc/shell.c,
	libepc/shell.h, Makefile.am, tests/framework.c:
	Rename EpcAvahiShell to EpcShell.
